XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

RFCs
~~~~
- Implemented RFC #0164 - Exceptions for XPClass::get*()
  (friebe)


Version 5.6.9, released 2008-09-03
----------------------------------
SVN version: 12451

Heads up!
~~~~~~~~~
- Removed disfunctional unittest.coverage package
  (friebe)
- Deprecated lang.Collection class - Use lang.types.ArrayList or the 
  classes from util.collections instead
  (friebe)
- Deprecated util.DateInterval in favor util.TimeInterval
  (friebe)

RFCs
~~~~
- Implemented RFC #0171 - Rename util.DateInterval class
  (friebe)
- Implemented RFC #0169 - New package unittest.web
  (friebe)

Bugfixes
~~~~~~~~
- Fixed text.encode.QuotedPrintable to encode question marks
  (treuter)
- Fixed lang.types.Number::equals() to return false for different types
  with same values (new Integer(1)->equals(new Long(1)) no longer yields
  TRUE now).
  (friebe)
- Made util.DateMath::diff() produce correct results (fixed segfault
  for PHP 5.2.6).
  (kiesel)

Features
~~~~~~~~
- Added util.collections.Arrays class: extension methods and bridging
  between lang.types and util.collections.
  (friebe)
- Added annotation accessors to lang.reflect.Field: hasAnnotation(),
  getAnnotation(), hasAnnotations(), getAnnotations()
  (friebe)
- Added XML declaration to debug output at sapi scriptlet.development
  (kiesel)
- Moved xml.wsdl to net.xp_framework.wsdl; this package only contained
  wsdl.xsl - so no code affected.
  (kiesel)


Version 5.6.8, released 2008-08-03
----------------------------------
SVN version: 12409

Heads up!
~~~~~~~~~
- Completely refactored the peer.http API to be able to nicely 
  implement RFC #0162.
  (friebe)

RFCs
~~~~
- Implemented RFC #0162: HTTP proxy
  (friebe)

Bugfixes
~~~~~~~~
- Fixed peer.ftp API to be able to cope with numerous FTP servers
  (friebe)